Sun Jun  7 04:16:39 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract class: StackFrameInfo.

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  extract method: generateFunctionBody.

	net/loveruby/cflat/entity/DefinedFunction.java: new method
	  #lvarScope.

Sun Jun  7 03:17:06 2009  Minero Aoki  <aamine@loveruby.net>

	* sysdep/x86/CodeGenerator.java (compileFunctionBody): fix offset
	  bug.

Sun Jun  7 03:02:35 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring
	  compileFunctionBody.

	* net/loveruby/cflat/sysdep/x86/AssemblyFile.java: objectify
	  VirtualStack.

	* net/loveruby/cflat/asm/IndirectMemoryReference.java: new method
	  .relocatable to generate relocatable IndirectMemoryReference.

	* net/loveruby/cflat/asm/MemoryReference.java: new method
	  #fixOffset.

	* net/loveruby/cflat/asm/DirectMemoryReference.java: new method
	  #fixOffset.

	* net/loveruby/cflat/asm/Assembly.java: remove fixStackOffset.

	* net/loveruby/cflat/asm/Operand.java: ditto.

Sat Jun  6 21:36:09 2009  Minero Aoki  <aamine@loveruby.net>

	* lib/alloca.s: shorten assembly.

Sat Jun  6 21:28:20 2009  Minero Aoki  <aamine@loveruby.net>

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateParameters -> locateParameters.

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateLocalVariablesTemp -> locateLocalVariables.

	* sysdep/x86/CodeGenerator.java: refactoring: rename method:
	  allocateLocalVariables -> fixLocalVariableOffsets.

Mon Jun  1 06:39:57 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
	  rename method: save -> store.

Mon Jun  1 05:43:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (load, save):
	  reduce # of arguments.

Mon Jun  1 03:55:41 2009  Minero Aoki  <aamine@loveruby.net>
