@@ -1,3 +1,9 @@
+Sun Jun  7 13:42:15 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java
+	  (StackFrameInfo): shorten code using CodeGenerator constant
+	  directly.
+
 Sun Jun  7 04:16:39 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
